More dashboard work

--- a/scripts/Grab Tweets and Prices.ipynb
+++ b/scripts/Grab Tweets and Prices.ipynb
@@ -2,17 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\brend\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\brend\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\brend\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import yfinance as yf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tweepy as tw\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "\n",
     "import emot\n",
+    "import nltk # sentiment library\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import SnowballStemmer, WordNetLemmatizer\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "nltk.download('vader_lexicon') # download vader lexicon\n",
+    "nltk.download(\"stopwords\")\n",
+    "nltk.download(\"wordnet\")\n",
+    "\n",
+    "from nltk.sentiment import SentimentIntensityAnalyzer as SIA\n",
     "\n",
     "from textblob import TextBlob"
    ]
@@ -46,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,33 +87,42 @@
     "api = tw.API(auth, wait_on_rate_limit=True)\n",
     "\n",
     "search_words = \"#btc OR #bitcoin OR bitcoin OR btc\"\n",
+    "\n",
+    "today = datetime.utcnow().date()- timedelta(days=1)\n",
+    "\n",
+    "yesterday = today - timedelta(days=1)\n",
+    "\n",
     "date_since = datetime.today().strftime('%Y-%m-%d')\n",
     "\n",
     "tweets = tw.Cursor(api.search,\n",
     "              q=search_words,\n",
     "              lang=\"en\",\n",
-    "              since=date_since).items()"
+    "              since=yesterday, until=today).items()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1386007838141517825 2021-04-24 17:08:20 RogersTRobert [] https://twitter.com/RogersTRobert/status/1386007838141517825 @INArteCarloDoss @satsdart I JUST downloaded CB to do some research myself.  I had assumed that higher Tether/USDC… httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/MkyiSPmtAf -0.07500000000000001\n",
-      "1386007838133088256 2021-04-24 17:08:20 Enemyofsociety3 ['Airdrop'] https://twitter.com/Enemyofsociety3/status/1386007838133088256 RT @AirdropDet:  left pointing magnifying glass  New #Airdrop: Liquifi\n",
+      "1385745298270552065 2021-04-23 23:59:59 MustafaRaaR [] https://twitter.com/MustafaRaaR/status/1385745298270552065 Also, the value of the coins can drop drastically in a single day. As much as 15%. httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/tDf5suQLaughing, big grin or laugh with glassesX 0.005714285714285705\n",
+      "1385745298127867904 2021-04-23 23:59:59 wokkrr [] https://twitter.com/wokkrr/status/1385745298127867904 RT @CryptoHunterGon: Perfect hold of 4H Pi line and daily 60 EMA for $woo \n",
       "\n",
-      " heavy dollar sign  RewarTongue sticking out, cheeky, playful or blowing a raspberry Up to 12 LQF [~$6] + 4 LQF [~$2] per referral\n",
+      "Is it really this easy? \n",
       "\n",
-      " red circle  Start the airdrop bot: httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/aJT… -0.09272727272727274\n",
-      "1386007837797724167 2021-04-24 17:08:20 auscryptolife [] https://twitter.com/auscryptolife/status/1386007837797724167 Hot on r/cryptocurrency: 73 percent of millionaires already hold crypto assets or plan to do so by the end of 2022  httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/fGurDvbBVi -0.07500000000000001\n",
-      "1386007837558591489 2021-04-24 17:08:20 bohemianfarmer [] https://twitter.com/bohemianfarmer/status/1386007837558591489 @MultiBitcoiner I do. If you have kids that are \"school age\" you should also, then you will learn why they shouldn'… httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/3Os1L8sy5g -0.4\n",
-      "1386007837072056321 2021-04-24 17:08:20 HodlOn4 ['BTC', 'Ethereum', 'SAFEMOON'] https://twitter.com/HodlOn4/status/1386007837072056321 RT @MaroKadri: Sold most of my #BTC and #Ethereum and put it into #SAFEMOON a little while ago , I believe it will cross a penny this year.… 0.10416666666666667\n",
-      "1386007836522684420 2021-04-24 17:08:20 Cha1Eric ['Bitcoin'] https://twitter.com/Cha1Eric/status/1386007836522684420 RT @Theclever360: Google searches of \"#Bitcoin\" have just reached an all-time high in Turkey 🇹🇷 following the government's recent ban on pa… 0.05333333333333334\n"
+      "BTC gonna have to hold current lows e… 0.32666666666666666\n",
+      "1385745295758307328 2021-04-23 23:59:59 LinkFr0g [] https://twitter.com/LinkFr0g/status/1385745295758307328 @gross_bit What you fail to account for is LT sellers that may be rotating the money from BTC (selling) into alts (… httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/SGP4RunUed -0.45\n",
+      "1385745283577905153 2021-04-23 23:59:56 DaniySuniy ['BSV'] https://twitter.com/DaniySuniy/status/1385745283577905153 RT @iamZatoshi:  money bag  dragon  BITCOIN SV GIVEAWAY  dragon  money bag  \n",
+      "\n",
+      "I will give $50 in $BSV to 1 person in the morning. \n",
+      "\n",
+      "Like, Retweet &amp; Follow me. #BSV  rocket  httpsSkeptical, annoyed, undecided, uneasy or hesitant… -0.4\n",
+      "1385745281661165580 2021-04-23 23:59:55 Cryptoplusrd ['SAFEMOON'] https://twitter.com/Cryptoplusrd/status/1385745281661165580 RT @safemoon: We are proud to announce we are now listed on @letsexchange_io Meaning you can now trade #SAFEMOON for any coin listed by Let… 0.8\n",
+      "1385745279849222156 2021-04-23 23:59:55 CryptoWatchBot ['Investing', 'crypto', 'cash'] https://twitter.com/CryptoWatchBot/status/1385745279849222156 #Investing 51.2% in this optimal #crypto portfolio and 48.8% #cash in the past 24 hours would have given you a 4.9%… httpsSkeptical, annoyed, undecided, uneasy or hesitant/t.co/xCvIV8bpIZ -0.325\n"
      ]
     }
    ],
@@ -156,7 +191,7 @@
     "    tweet_sentiment = TextBlob(tweet_text).sentiment.polarity\n",
     "    sentiment_counter += tweet_sentiment\n",
     "        \n",
-    "    print(tweet_id, tweet_date, tweet_username, hashtags, link, tweet_text, tweet_sentiment)\n",
+    "    print(tweet_id, tweet_time, tweet_username, hashtags, link, tweet_text, tweet_sentiment)\n",
     "    count += 1\n",
     "    if count > 5:\n",
     "        break\n",
